--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="keywords" content="piniyi, artiste, art" />
 
     <!-- lien pour intégrer la police  -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Playfair+Display:ital,wght@0,500;0,800;1,500&family=Poppins:ital,wght@0,400;0,800;1,800&display=swap" rel="stylesheet">
     <!-- lien au css -->
     <link rel="stylesheet" type="text/css" href="style.css" />
     <!-- lien jQuery et index.js -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="index.js" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <!-- contenu de la page commence ici -->
   <body id="acceuil">
@@ -27,7 +27,7 @@
 
       <!-- un div servir comme img de fond-->
       <div class="acceuil-img">
-        <img class="acceuil-bg" src="img/acuille_bg.jpg" alt="">
+        <img class="acceuil-bg" src="img/acuille_bg.jpg" alt="" />
 
       </div>
 
