--- a/formulaire.html
+++ b/formulaire.html
@@ -10,12 +10,12 @@
   <meta name="keywords" content="piniyi, artiste, art" />
 
   <!-- lien pour intégrer la police  -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Playfair+Display:ital,wght@0,500;0,800;1,500&family=Poppins:ital,wght@0,400;0,800;1,800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Playfair+Display:ital,wght@0,500;0,800;1,500&family=Poppins:ital,wght@0,400;0,800;1,800&display=swap" rel="stylesheet" />
 
   <!-- Bootstrap CSS -->
   <!-- J'ai utilisé Bootstrap que pour la partie carrousel mais bizzarement cela change un peu la position de mon menu horizontal original et je n'arrive pas à le corrigé. j'ai donc décidé de mettre ce lien dans tous les pages pour la cohérence -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
   <!-- lien au css -->
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
