--- a/présentation.html
+++ b/présentation.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="piniyi, artiste, art" />
 
     <!-- lien pour intégrer la police  -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Playfair+Display:ital,wght@0,500;0,800;1,500&family=Poppins:ital,wght@0,400;0,800;1,800&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
