fix img display problem

--- a/projet.html
+++ b/projet.html
@@ -83,14 +83,14 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/02_Anything_about_art/édition Taschen.png" class="d-block" alt="Anything About Art">
+        <img src="img/02_Anything_about_art/edition Taschen.png" class="d-block" alt="Anything About Art">
         <div class="carousel-caption d-none d-md-block">
           <h5>Anything About Art</h5>
           <p>Tout ce qui est sur l'art.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/03_Blow_water_café/01.jpg" class="d-block" alt="Blow Water Café">
+        <img src="img/03_Blow_water_cafe/01.jpg" class="d-block" alt="Blow Water Café">
         <div class="carousel-caption d-none d-md-block">
           <h5>Blow Water Café</h5>
           <p>J'échange avec des ami(e)s sur la vie, l'amour et l'art.</p>
@@ -143,7 +143,7 @@
       <div class="list-monthly">
         <p>À chaque mois, je partage l'exposition la plus passionante que je fait.</p>
         <hr>
-        <img src="img/01_Monthly_favs/08août.png" alt="">
+        <img src="img/01_Monthly_favs/08aout.png" alt="">
         <img src="img/01_Monthly_favs/09sep.png" alt="">
         <img src="img/01_Monthly_favs/10oct.PNG" alt="">
       </div>
@@ -151,13 +151,13 @@
         <p>Tout ce qui est sur l'art.</p>
         <hr>
         <img src="img/02_Anything_about_art/cidre.png" alt="">
-        <img src="img/02_Anything_about_art/édition Taschen.png" alt="">
+        <img src="img/02_Anything_about_art/edition Taschen.png" alt="">
       </div>
       <div class="list-blow">
         <p>J'échange avec des ami(e)s sur la vie, l'amour et l'art.</p>
         <hr>
-        <img src="img/03_Blow_water_café/01.jpg" alt="">
-        <img src="img/03_Blow_water_café/02.jpg" alt="">
+        <img src="img/03_Blow_water_cafe/01.jpg" alt="">
+        <img src="img/03_Blow_water_cafe/02.jpg" alt="">
       </div>
       <div class="list-art">
         <p>Mon expérience sur le marché de l'art.</p>
@@ -178,13 +178,13 @@
   <div class="grid-affichage">
     <h1>Projet</h1>
     <div class="grid-container">
-    <img src="img/01_Monthly_favs/08août.png" alt="">
+    <img src="img/01_Monthly_favs/08aout.png" alt="">
     <img src="img/01_Monthly_favs/09sep.png" alt="">
     <img src="img/01_Monthly_favs/10oct.PNG" alt="">
     <img src="img/02_Anything_about_art/cidre.png" alt="">
-    <img src="img/02_Anything_about_art/édition Taschen.png" alt="">
-    <img src="img/03_Blow_water_café/01.jpg" alt="">
-    <img src="img/03_Blow_water_café/02.jpg" alt="">
+    <img src="img/02_Anything_about_art/edition Taschen.png" alt="">
+    <img src="img/03_Blow_water_cafe/01.jpg" alt="">
+    <img src="img/03_Blow_water_cafe/02.jpg" alt="">
     <img src="img/04_Art fairs_vlog/Art Paris2020.png" alt="">
     <img src="img/04_Art fairs_vlog/JEP Drouot 2020.png" alt="">
     <img src="img/05_Videos_for_Artists/Ren_Han's_residency.png" alt="">
